argo-ui/kubeflow-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  creationTimestamp: "2019-10-27T02:57:08Z"
  generation: 1
  name: kubeflow-gateway
  namespace: kubeflow
  resourceVersion: "56422"
  selfLink: /apis/networking.istio.io/v1alpha3/namespaces/kubeflow/gateways/kubeflow-gateway
  uid: be41d954-fe0a-4ef1-bec7-81b097db311b
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
